# screenshot-saas

./: .env.example  .gitignore  AGENTS.md  COMPETITIVE_ANALYSIS.md  FEATURE_QUALITY_AUDIT_PLAN.md  MARKETING.md  SCREENSHOT_ENGINE_FEATURE_AUDIT_FINDINGS.md  SEO_PLAN.md  STRATEGY.md  biome.json  bunfig.toml  package.json  skills-lock.json  tsconfig.base.json  turbo.json  vercel.json
.agents/skills/calculator/scripts/: cli.ts
.agents/skills/calculator/src/: calculator.test.ts
.agents/skills/fumadocs/: SKILL.md
.agents/skills/issue-tracking/: SKILL.md
.agents/skills/polar/: reference.md
.github/workflows/: e2e-prod.yml
.husky/: pre-commit
apps/e2e/: package.json
apps/e2e/src/: helpers.ts  smoke.test.ts
apps/server/: package.json  tsconfig.json
apps/server/__integration__/: screenshot.integration.test.ts  signed-urls.integration.test.ts  subscription.integration.test.ts  webhook.integration.test.ts
apps/server/scripts/: setup-cache-storage.ts
apps/server/src/: app.ts  index.ts
apps/web/: next.config.ts  package.json  source.config.ts  tsconfig.json
apps/web/src/: middleware.ts  proxy.ts
sdks/go/: README.md  screenshotapi.go
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/javascript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/php/: README.md  composer.json
sdks/php/src/: Client.php  ScreenshotOptions.php
sdks/python/: README.md  pyproject.toml
sdks/python/src/screenshotapi/: __init__.py  client.py  errors.py  types.py
sdks/ruby/: README.md  screenshotapi.gemspec
sdks/ruby/lib/: screenshotapi.rb
(+405 files in other folders)
