[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshotapi"
version = "1.0.0"
description = "Official Python SDK for ScreenshotAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "ScreenshotAPI" }]
keywords = ["screenshot", "api", "screenshotapi", "webpage", "capture"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://screenshotapi.dev"
Repository = "https://github.com/miketromba/screenshotapi-python"
Documentation = "https://screenshotapi.dev/docs"
